[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/DisposableDroidBB_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/menu/textures/base.png" type="Texture" id=2]
[ext_resource path="res://src/menu/save_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/mouse click.mp3" type="AudioStream" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[node name="Save_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="base" type="NinePatchRect" parent="."]
margin_left = 392.0
margin_top = 174.0
margin_right = 456.0
margin_bottom = 250.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="container" type="VBoxContainer" parent="base"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 72.0

[node name="1" type="Button" parent="base/container"]
margin_right = 64.0
margin_bottom = 14.0
theme = SubResource( 1 )
text = "SLOT 1"
flat = true

[node name="2" type="Button" parent="base/container"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0
theme = SubResource( 2 )
text = "SLOT 2"
flat = true

[node name="3" type="Button" parent="base/container"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
theme = SubResource( 2 )
text = "SLOT 3"
flat = true

[node name="back" type="Button" parent="base/container"]
margin_top = 54.0
margin_right = 64.0
margin_bottom = 68.0
theme = SubResource( 3 )
text = "BACK"
flat = true

[connection signal="pressed" from="base/container/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="base/container/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="base/container/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="base/container/back" to="." method="_on_back_pressed"]
